# prx-waf

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.firedrill  README.md  codex.md  deny.toml  docker-compose.cluster.yml  docker-compose.firedrill.yml  docker-compose.yml  prx-waf.service
.cargo/: audit.toml
.github/workflows/: ci.yml
configs/: cluster-node-a.toml  cluster-node-b.toml  cluster-node-c.toml  default.toml  firedrill.toml
crates/gateway/: Cargo.toml
crates/gateway/src/: cache.rs  context.rs  http3.rs  lb.rs  lib.rs  proxy.rs  router.rs  smuggling.rs  ssl.rs  tunnel.rs
crates/prx-waf/: Cargo.toml
crates/prx-waf/src/: main.rs
crates/waf-api/: Cargo.toml
crates/waf-api/src/: auth.rs  cache_api.rs  cluster.rs  cluster_sync_hook.rs  crowdsec.rs  error.rs  handlers.rs  health.rs  lib.rs  middleware.rs  notifications.rs  observations.rs  plugins.rs  security.rs  server.rs  state.rs  static_files.rs  stats.rs  totp.rs  tunnels.rs  websocket.rs
crates/waf-cluster/: Cargo.toml
crates/waf-cluster/src/: cluster_forward.rs  discovery.rs  lib.rs  node.rs  protocol.rs
crates/waf-cluster/src/crypto/: ca.rs  node_cert.rs  store.rs  token.rs
crates/waf-cluster/src/election/: mod.rs
crates/waf-cluster/src/health/: detector.rs  mod.rs
crates/waf-cluster/src/sync/: config.rs  events.rs  mod.rs  rules.rs  scheduler.rs
crates/waf-cluster/src/transport/: client.rs  frame.rs  identity.rs  mod.rs  server.rs
crates/waf-cluster/tests/: cluster_integration.rs  election_test.rs  integration_test.rs  peer_eviction_test.rs
crates/waf-common/: Cargo.toml
crates/waf-common/src/: config.rs  content_security_config.rs  crypto.rs  lib.rs  types.rs  url_validator.rs
crates/waf-engine/: Cargo.toml
crates/waf-engine/src/: block_page.rs  checker.rs  engine.rs  geoip.rs  geoip_updater.rs  lib.rs  rules.rs  semantic_sink.rs
crates/waf-engine/src/checks/: anti_hotlink.rs  bot.rs  cc.rs  dir_traversal.rs  geo.rs  mod.rs  owasp.rs  rce.rs  scanner.rs  sensitive.rs  sql_injection.rs  xss.rs
crates/waf-engine/src/checks/content_security/: budget.rs  canary.rs  config.rs  detectors.rs  mod.rs  preprocess.rs  scoring.rs  struct_extract.rs  types.rs  xss_dom.rs  xss_js.rs
crates/waf-engine/src/community/: blocklist.rs  checker.rs  client.rs  config.rs  enroll.rs  mod.rs  reporter.rs
crates/waf-engine/src/crowdsec/: appsec.rs  cache.rs  checker.rs  client.rs  config.rs  mod.rs  models.rs  pusher.rs  sync.rs
crates/waf-engine/src/plugins/: manager.rs  mod.rs
crates/waf-engine/src/rules/: cluster_sync.rs  engine.rs  hot_reload.rs  ip_feed.rs  manager.rs  registry.rs  sources.rs
crates/waf-engine/src/rules/builtin/: bot.rs  mod.rs  owasp.rs  scanner.rs
crates/waf-engine/src/rules/formats/: json.rs  mod.rs  modsec.rs  yaml.rs
crates/waf-engine/tests/: content_security_engine_parity.rs  content_security_parity.rs  ip_feed_e2e.rs  synced_clear_e2e.rs
crates/waf-storage/: Cargo.toml
crates/waf-storage/src/: db.rs  error.rs  lib.rs  models.rs  repo.rs
crates/waf-storage/tests/: hosts_remote_ip.rs  semantic_observations.rs
docs/: cluster-design.md  cluster-execution-plan.md  cluster-guide.md  cluster-progress.md
migrations/: 0003_certificates_and_rules.sql  0005_plugins_and_tunnels.sql  0006_crowdsec.sql  0008_add_geo_info_to_attack_logs.sql  0009_totp_replay.sql  0010_crowdsec_config_unique.sql  0011_semantic_observations.sql  0012_semantic_observations_retention.sql
rules/: owasp-crs.yaml
rules/advanced/: README.md  deserialization.yaml  prototype-pollution.yaml  ssrf.yaml  ssti.yaml  webshell-upload.yaml  xxe.yaml
rules/bot-detection/: README.md  crawlers.yaml  credential-stuffing.yaml  scraping.yaml
rules/geoip/: README.md  country-blocklist.yaml
rules/owasp-api/: README.md  broken-auth.yaml  data-exposure.yaml  injection.yaml  mass-assignment.yaml  rate-abuse.yaml
tests/: e2e-cluster.sh
tools/: modsec2yaml.py  sync.py  validate.py
web/admin-ui/src/api/: index.ts
web/admin-ui/src/components/: Layout.vue
web/admin-ui/src/i18n/: ar.ts  de.ts  en.ts  es.ts  fr.ts  index.ts  ja.ts  ka.ts  ko.ts  ru.ts  zh.ts
web/admin-ui/src/router/: index.ts
web/admin-ui/src/views/: BotManagement.vue  CCProtection.vue  Certificates.vue  ClusterNodeDetail.vue  ClusterOverview.vue  ClusterSync.vue  ClusterTokens.vue  CrowdSecDecisions.vue  CrowdSecSettings.vue  CrowdSecStats.vue  CustomRules.vue  IpRules.vue  Observations.vue  RuleSources.vue  RulesManagement.vue  UrlRules.vue
