[workspace]
members = [
    "crates/prx-waf",
    "crates/gateway",
    "crates/waf-engine",
    "crates/waf-storage",
    "crates/waf-api",
    "crates/waf-common",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["PRX-WAF Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/openprx/prx-waf"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP proxy
pingora = { version = "0.8", features = ["lb"] }
pingora-core = { version = "0.8" }
pingora-proxy = { version = "0.8" }
pingora-http = { version = "0.8" }
pingora-timeout = { version = "0.8" }

# API framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database - PostgreSQL
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros", "migrate", "chrono", "uuid"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
dashmap = "6"
regex = "1"
ipnet = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
bytes = "1"
http = "1"

# Phase 3 additions
rhai = { version = "1", features = ["sync"] }
aho-corasick = "1"
serde_yaml = "0.9"
instant-acme = "0.7"
rcgen = "0.13"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
