[workspace]
members = [
    "crates/prx-waf",
    "crates/gateway",
    "crates/waf-engine",
    "crates/waf-storage",
    "crates/waf-api",
    "crates/waf-common",
    "crates/waf-cluster",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["g1e2x87"]
license = "MIT OR Apache-2.0"
description = "Pingora-based web application firewall with YAML rules engine"
repository = "https://github.com/openprx/prx-waf"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP proxy
pingora = { version = "0.8", features = ["lb"] }
pingora-core = { version = "0.8" }
pingora-proxy = { version = "0.8" }
pingora-http = { version = "0.8" }
pingora-timeout = { version = "0.8" }

# API framework
axum = { version = "0.7", features = ["macros", "ws", "multipart"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database - PostgreSQL
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros", "migrate", "chrono", "uuid"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
dashmap = "6"
regex = "1"
ipnet = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
bytes = "1"
http = "1"

# Phase 3 additions
rhai = { version = "1", features = ["sync"] }
aho-corasick = "1"
serde_yaml = "0.9"
instant-acme = "0.7"
rcgen = "0.13"
base64 = "0.22"

# Phase 4 additions
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = "9"
aes-gcm = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1", "smtp-transport", "builder"] }
rust-embed = "8"
mime_guess = "2"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
totp-lite = "2"
data-encoding = "2"

# Phase 5 additions
wasmtime = { version = "23", default-features = false, features = ["cranelift", "runtime", "component-model"] }
moka = { version = "0.12", features = ["future"] }
quinn = { version = "0.11", features = ["rustls"] }
rustls = { version = "0.23", features = ["ring"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
rustls-pemfile = "2"
tokio-tungstenite = { version = "0.23", default-features = false, features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
multipart = { version = "0.18", default-features = false, features = ["server"] }
axum-extra = { version = "0.9", features = ["multipart"] }

# Phase 7 additions
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }

# Cluster additions
lz4_flex = "0.11"
hmac = "0.12"
time = { version = "0.3", default-features = false, features = ["std"] }
parking_lot = "0.12"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
indexing_slicing = "deny"

dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
undocumented_unsafe_blocks = "deny"

inefficient_to_string = "deny"
large_futures = "warn"

module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"
cast_lossless = "warn"
too_many_lines = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
