[package]
name = "gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
waf-common = { path = "../waf-common" }
waf-engine = { path = "../waf-engine" }
waf-storage = { path = "../waf-storage" }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }

pingora-core = { workspace = true }
pingora-proxy = { workspace = true }
pingora-http = { workspace = true }
instant-acme = { workspace = true }
rcgen = { workspace = true }
moka = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
h3 = { workspace = true }
h3-quinn = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
rustls-pemfile = { workspace = true }
parking_lot = { workspace = true }
ipnet = { workspace = true }

[lints]
workspace = true
