[package]
name = "waf-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
waf-common = { path = "../waf-common" }
waf-storage = { path = "../waf-storage" }
waf-engine = { path = "../waf-engine" }
waf-cluster = { path = "../waf-cluster" }
gateway = { path = "../gateway" }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
lettre = { workspace = true }
rust-embed = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
futures-util = { workspace = true }
ipnet = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
base64 = { workspace = true }

[lints]
workspace = true
