[package]
name = "waf-cluster"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
waf-common = { path = "../waf-common" }
waf-engine = { path = "../waf-engine" }

# Transport (QUIC/TLS) — already in workspace
quinn          = { workspace = true }
rustls         = { workspace = true }
rcgen          = { workspace = true }
rustls-pki-types = { workspace = true }
bytes          = { workspace = true }

# Async runtime — already in workspace
tokio = { workspace = true }

# Serialization — already in workspace
serde      = { workspace = true }
serde_json = { workspace = true }

# Logging — already in workspace
tracing = { workspace = true }

# Error handling — already in workspace
anyhow = { workspace = true }

# Async traits — data-plane sync hooks (RuleReloader / ApiForwardHandler)
async-trait = { workspace = true }

# Crypto — already in workspace
aes-gcm  = { workspace = true }
sha2     = { workspace = true }
argon2   = { workspace = true }
hmac     = { workspace = true }
hex      = { workspace = true }
base64   = { workspace = true }

# Utilities — already in workspace
rand = { workspace = true }
time = { workspace = true }
parking_lot = { workspace = true }

# Compression — only genuinely new workspace dep
lz4_flex = { workspace = true }

# X.509 parsing — peer certificate SAN → authenticated node identity (H-9)
x509-parser = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tokio       = { workspace = true, features = ["test-util"] }
async-trait = { workspace = true }
