[package]
name = "waf-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
# Slow, salted KDF for encryption at rest (M-12)
argon2 = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true
