[package]
name = "waf-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
waf-common = { path = "../waf-common" }
waf-storage = { path = "../waf-storage" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
regex = { workspace = true }
ipnet = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rhai = { workspace = true }
aho-corasick = { workspace = true }
serde_yaml = { workspace = true }
wasmtime = { workspace = true }
reqwest = { workspace = true }
notify = { workspace = true }
ip2region = { git = "https://github.com/lionsoul2014/ip2region.git", branch = "master" }
arc-swap = "1"
parking_lot = { workspace = true }
